...
 */
public class Buttons1 {
   
    struct AddRecipeButton: View {
        
        var body: some View {
            Text("Add Recipe")
                .font(Font.custom("BebasNeue-Regular", size: 20))
                .frame(width: UIScreen.main.bounds.width - 25, height: 50)
                .background(
                    ZStack {
                        Color(#colorLiteral(red: 1, green: 0.6202532053, blue: 0, alpha: 1))
                        RoundedRectangle(cornerRadius: 16, style:
...
        }
    }
    
    struct BrowseRecipesButton: View {
        @State var tap = false
        var body: some View{
            Text("Browse your Recipes")
                .font(Font.custom("BebasNeue-Regular",size: 20))
                .frame(width: UIScreen.main.bounds.width - 50, height: 50)
                
                .background(
                    ZStack {
                        Color(#colorLiteral(red: 1, green: 0.6202532053, blue: 0, alpha: 1))
...
