...
                ScrollView {
                    Text("RECIPLEASE").font(Font.custom("BebasNeue-Regular", size: 50))
                        .foregroundColor(Color(#colorLiteral(red: 0.2549019754, green: 0.2745098174, blue: 0.3019607961, alpha: 1)))
                    Spacer()
                        .frame(height:53)
                    HStack {
                        TextField("Title", text: $title)
                            .multilineTextAlignment(TextAlignment.center)
                            .frame(width: UIScreen.main.bounds.width-170, height:40)
                            .background(Color(#colorLiteral(red: 0.8039215803, green: 0.8039215803, blue: 0.8039215803, alpha: 1)))
                            .clipShape(RoundedRectangle(cornerRadius: 12, style:
                                .continuous))
                            .foregroundColor(Color(#colorLiteral(red: 0.2549019754, green: 0.2745098174, blue: 0.3019607961, alpha: 1)))
...
